change index header

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: KC's Skylight
 SEOTitle: KC's Skylight
-header-img: img/home-bg.jpg
+header-img: img/home-bg-art.jpg
 email: kimiazhu@gmail.com
 description: "...about web, mobile and game...etc..."
 keyword: "KC, ZHU HAIHUA"
