--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: KC's Skylight
-SEOTitle: KC's Skylight
+SEOTitle: Yet another programmer and designer.
 header-img: img/home-bg-art.jpg
 email: kimiazhu@gmail.com
 description: "...about web, mobile and game...etc..."
