--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: KC's Skylight
-SEOTitle: Yet another programmer and designer.
+SEOTitle: KC's Skylight
 header-img: img/home-bg-art.jpg
 email: kimiazhu@gmail.com
-description: "...about web, mobile and game...etc..."
+description: "A father, a programmer and designer."
 keyword: "KC, ZHU HAIHUA"
 url: "http://kchu.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
