--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ friends: [
         title: "github",
         href: "http://github.com/"
     },{
-        title: "github",
-        href: "http://github.io/"
+        title: "kimiazhu.info",
+        href: "http://kimiazhu.info/"
     }
 ]
