--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ anchorjs: true                          # if you want to customize anchor. check
 # gems: [jekyll-paginate]
 gems: 
   - jekyll-paginate
-  - jekyll-sitemap
+  # - jekyll-sitemap
 
 
 # Markdown settings
