--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ weibo_username:     kimiazhu
 zhihu_username:     kimiazhu
 github_username:    kimiazhu
 twitter_username:   kimiazhu
-facebook_username:  kimia.zhu
+facebook_username:  chuhaihua
 
 
 
