--- a/_config.yml
+++ b/_config.yml
@@ -77,8 +77,8 @@ duoshuo_username: kchu
 # Baidu Analytics
 # ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 # Google Analytics
-# ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-# ga_domain: kchu.me
+ga_track_id: 'UA-6938387-4'            # Format: UA-xxxxxx-xx
+ga_domain: kchu.me
 
 
 
