--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ duoshuo_username: kchu
 
 # Analytics settings
 # Baidu Analytics
-# ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+ba_track_id: 21044a7b14849b22e10f3d489a031a83
 # Google Analytics
 ga_track_id: 'UA-6938387-4'            # Format: UA-xxxxxx-xx
 ga_domain: kchu.me
